--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -705,7 +705,7 @@ border-color: #adada2; background-color: #efefef;">
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-light waves-effect" data-dismiss="modal">Cancel</button>
+                                            <button type="button" class="btn btn-light waves-effect" data-dismiss="modal" style="background-color: #fff; color: #3D3D36;">Cancel</button>
                                             <button type="button" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36;">Hide Insights</button>
                                         </div>
                                     </div><!-- /.modal-content -->
