--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -291,7 +291,7 @@ border-color: #adada2; background-color: #efefef;">
 
              <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3 style="font-family: dosis">Company news</h3>
+                        <h3 style="font-family: dosis">Your {Company name} space</h3>
                     </div>
             </div>
 
@@ -303,9 +303,9 @@ border-color: #adada2; background-color: #efefef;">
                         <div class="card card-body text-center" style="border-style: dashed; border-width: 1px; border-color: #adada2;">
                             <div class="card-body">
                                 <div class="mx-auto">
-                                    <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Got important news or content to share with your company?</h3>
-                                    <p>Add a link or video to your employee's homepage. It's a great way to share your culture and what makes you great!</p>
-                                        <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-2 mb-5" style="color: #3D3D36">Add link or video</button> 
+                                    <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Give our homepage a touch of your secret sauce...</h3>
+                                    <p>Want to promote perks, share news, upload videos or show off your culture?</p>
+                                        <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-2 mb-5" style="color: #3D3D36">Get started</button> 
                                 </div>
                             </div>
                         </div>
