--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -320,7 +320,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add image, link or video</p>
+                                    <p class="mb-5 mt-2">Add new...</p>
                                 </div>
                             </div>
                         </div>
@@ -330,7 +330,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add image, link or video</p>
+                                    <p class="mb-5 mt-2">Add new...</p>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +340,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add image, link or video</p>
+                                    <p class="mb-5 mt-2">Add new...</p>
                                 </div>
                             </div>
                         </div>
