--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -468,6 +468,7 @@ border-color: #adada2; background-color: #efefef;">
                             </div>
                         </div>
                         
+                    <div class="container">
                         <div class="row mt-3">
                             <div class="col-lg-3">
                                 <a href="#">
@@ -542,6 +543,7 @@ border-color: #adada2; background-color: #efefef;">
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
                         </div>
                     </div>
@@ -585,34 +587,52 @@ border-color: #adada2; background-color: #efefef;">
 
                 <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3 style="font-family: dosis">Company news</h3>
+                        <h3 style="font-family: dosis">The {company name} space</h3>
                     </div>
                 </div>
 
-                    <div class="row mt-4">
-                            <div class="col-lg-4">
-                                <a href="#">
+                    <div class="row mt-2 mb-4">
+                        <div class="col-lg-12">
+                            <div class="card-deck-wrapper">
+                                <div class="card-deck">
                                     <div class="card">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">This is a longer card with description text below as
+                                                a natural lead-in to additional content. This content is a little
+                                                bit longer.</p>
+                                            <p class="card-text">
+                                                <small class="text-muted">Visible to everyone</small>
+                                            </p>
+                                        </div>
                                     </div>
-                                </a>
-                            </div>
-                             
-                            <div class="col-lg-4">
-                                <a href="#">
-                                    <div class="card">
-                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
-                                    </div>
-                                </a>
-                            </div>
 
-                            <div class="col-lg-4">
-                                <a href="#">
+                                    <div class="card">
+                                        <div class="embed-responsive embed-responsive-1by1">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PrUxWZiQfy4?ecver=1"></iframe>
+                                        </div>
+                                        <div class="card-body">
+                                            <p class="card-text">This card has description text below as a natural
+                                                lead-in to additional content.</p>
+                                            <p class="card-text">
+                                                <small class="text-muted">Visible to everyone</small>
+                                            </p>
+                                        </div>
+                                    </div>
+
                                     <div class="card">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">
+                                                <small class="text-muted">Draft: Only visible to admins</small>
+                                            </p>
+                                        </div>
                                     </div>
-                                </a>
-                            </div>
+
+                                </div> <!-- end card-deck-->
+                            </div>  
+                        </div>  
+                    </div>
 
 
 
