--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -291,7 +291,7 @@ border-color: #adada2; background-color: #efefef;">
 
              <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3 style="font-family: dosis">Your {Company name} space</h3>
+                        <h3 style="font-family: dosis">The {Company name} space</h3>
                     </div>
             </div>
 
@@ -587,7 +587,7 @@ border-color: #adada2; background-color: #efefef;">
 
                 <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3 style="font-family: dosis">The {company name} space</h3>
+                        <h3 style="font-family: dosis">The {Company name} space</h3>
                     </div>
                 </div>
 
@@ -595,37 +595,29 @@ border-color: #adada2; background-color: #efefef;">
                         <div class="col-lg-12">
                             <div class="card-deck-wrapper">
                                 <div class="card-deck">
-                                    <div class="card">
+                                    <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer card with description text below as
+                                            <p class="card-text">This is a longer, clickable card with description text below as
                                                 a natural lead-in to additional content. This content is a little
                                                 bit longer.</p>
-                                            <p class="card-text">
-                                                <small class="text-muted">Visible to everyone</small>
-                                            </p>
                                         </div>
                                     </div>
 
-                                    <div class="card">
+                                    <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
                                         <div class="embed-responsive embed-responsive-1by1">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PrUxWZiQfy4?ecver=1"></iframe>
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
                                         </div>
                                         <div class="card-body">
                                             <p class="card-text">This card has description text below as a natural
                                                 lead-in to additional content.</p>
-                                            <p class="card-text">
-                                                <small class="text-muted">Visible to everyone</small>
-                                            </p>
                                         </div>
                                     </div>
 
-                                    <div class="card">
+                                    <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">
-                                                <small class="text-muted">Draft: Only visible to admins</small>
-                                            </p>
+                                            
                                         </div>
                                     </div>
 
