--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -80,6 +80,8 @@ span.ml-2.bill:hover {
     right: 0
 }
 
+
+
 </style>
 
 <% end %>
@@ -228,59 +230,133 @@ span.ml-2.bill:hover {
 
                              <div class="row mt-2">
                                     <div class="col-lg-6">
-                                        <h3 style="font-family: dosis">Your other products</h3>
+                                        <h3 style="font-family: dosis">Your products</h3>
                                     </div>
                             </div>
 
                         <div class="row mt-3 mb-4">
 
-                            <div class="col-lg-4">
-                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/P.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Perks</h2>
+                                        </div>
+                                      </div>
 
-                                        <h3 class="mt-3"><a href="#" class="text-dark">Medical</a></h3>
-                                        <p class="mb-3">Get 24/7 access to an online GP</p>
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Hundreds of exclusive deals and discounts</p>
+                                        </div>
+                                      </div>
 
-                                    </div> <!-- end .padding -->
-                                </div> <!-- end card-box-->
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
                             </div>
 
-                            <div class="col-lg-4">
-                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/R.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Recognition</h2>
+                                        </div>
+                                      </div>
 
-                                        <h3 class="mt-3"><a href="#" class="text-dark">Recognition</a></h3>
-                                        <p class="mb-3">Reward & recognise top performers</p>
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Reward & recognise top performers</p>
+                                        </div>
+                                      </div>
 
-                                    </div> <!-- end .padding -->
-                                </div> <!-- end card-box-->
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
                             </div>
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/I.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Insights</h2>
+                                        </div>
+                                      </div>
 
-                            <div class="col-lg-4">
-                                <div class="text-center card bill grey" style="border-style: dashed;
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Measure and improve employee engagement</p>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="card bill grey" style="border-style: dashed;
 border-width: 0px;
 border-color: #adada2; background-color: #efefef;">
-                                <div class="row" style="margin-bottom: -25px;">
-                                    <div class="col-lg-6">
-                                        <p class="float-left mt-0 mb-0 ml-2 mt-1" data-toggle="modal" data-target="#myModal2"><i class="fas fa-close" style="color: #888;"></i></p>
-                                    </div>
-                                    <div class="col-lg-6">
-                                    </div>
-                                </div>
                                     <div class="ribbon-wrapper">
                                         <div class="ribbon"><i class="fas fa-lock"></i> Unlock</div>
                                     </div>
-                                    <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3" style="color: #989891;"><a href="#" style="color: #989891;">Insights</a></h3>
-                                        <p class="mb-3" style="color: #989891;">Measure and improve employee engagement</p>
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/M.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px; color: #888;">Medical</h2>
+                                        </div>
+                                      </div>
 
-                                    </div> <!-- end .padding -->
-                                </div> <!-- end card-box-->
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px; color: #888;">Get 24/7 access to an online GP</p>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
                             </div>
+
+
 
                         </div>
                     
@@ -550,7 +626,7 @@ border-color: #adada2; background-color: #efefef;">
 
                  <div class="row mt-2">
                             <div class="col-lg-6">
-                                <h3 style="font-family: dosis">Your other products</h3>
+                                <h3 style="font-family: dosis">Your products</h3>
                             </div>
                     </div>
                         
