--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -144,7 +144,7 @@ span.ml-2.bill:hover {
                             <div class="col-lg-12">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <h3 style="font-family: dosis">Your perks <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all 234 Perks</span></h3>
+                                        <h3 style="font-family: dosis">Your recommendations <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all Perks</span></h3>
                                     </div>
                                 </div>
                             </div>
@@ -360,10 +360,6 @@ border-color: #adada2; background-color: #efefef;">
 
                         </div>
                     
-                        
-
-                 
-
 
              <div class="row mt-2">
                     <div class="col-lg-6">
@@ -539,7 +535,7 @@ border-color: #adada2; background-color: #efefef;">
                     <div class="col-lg-12"> 
                         <div class="row">
                             <div class="col-lg-6">
-                                <h3 style="font-family: dosis">Your perks <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all 234 Perks</span></h3>
+                                <h3 style="font-family: dosis">Your recommendations <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all Perks</span></h3>
                             </div>
                             </div>
                         </div>
@@ -625,38 +621,99 @@ border-color: #adada2; background-color: #efefef;">
                     </div>
 
                  <div class="row mt-2">
-                            <div class="col-lg-6">
-                                <h3 style="font-family: dosis">Your products</h3>
-                            </div>
-                    </div>
-                        
-
-                 <div class="row mt-3 mb-4">
-
-                            <div class="col-lg-4">
-                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
-
-                                        <h3 class="mt-3"><a href="#" class="text-dark">Medical</a></h3>
-                                        <p class="mb-3">Get 24/7 access to an online GP</p>
-
-                                    </div> <!-- end .padding -->
-                                </div> <!-- end card-box-->
+                                    <div class="col-lg-6">
+                                        <h3 style="font-family: dosis">Your products</h3>
+                                    </div>
                             </div>
 
-                            <div class="col-lg-4">
-                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+                        <div class="row mt-3 mb-4">
 
-                                        <h3 class="mt-3"><a href="#" class="text-dark">Recognition</a></h3>
-                                        <p class="mb-3">Reward & recognise top performers</p>
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/P.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Perks</h2>
+                                        </div>
+                                      </div>
 
-                                    </div> <!-- end .padding -->
-                                </div> <!-- end card-box-->
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Hundreds of exclusive deals and discounts</p>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
                             </div>
 
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/R.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Recognition</h2>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Reward & recognise top performers</p>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                  <div class="row">
+                                    <div class="col-lg-1 col-md-2 col-sm-2">
+                                        <img src="/template-assets/images/users/I.png" class="" alt="product-logo" style="max-width: 90px; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                                      </div>
+                                      <div class="col-lg-1 col-md-8 col-sm-8">
+                                        <div class="card-block">
+                                          <h2 class="card-title mt-2 mb-0 ml-0 float-left" style="font-family: dosis; padding-bottom: 1px; padding-left: 20px; padding-top: 14px;">Insights</h2>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-7 px-3 d-none d-lg-block">
+                                        <div class="card-block px-3">
+                                          <p class="mt-2 mb-3 ml-3 float-left" style="font-family: dosis; padding-top: 20px; font-size: 19px; padding-left: 50px;">Measure and improve employee engagement</p>
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-3 px-3 col-md-2 col-sm-2">
+                                        <div class="card-block px-3">
+                                          <h4 class="card-title mt-2 mb-3 float-right"><i class="fas fa-angle-right" style="padding-top: 25px; font-size: 19px;"></i></h4>
+                                          
+                                        </div>
+                                      </div>
+
+                                    </div>
+                                  </div>
+                            </div>
+                            
                             
 
                         </div>
