--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -466,7 +466,7 @@ border-color: #adada2; background-color: #efefef;">
                                                         <i class="h1 text-muted dripicons-cloud-upload"></i>
                                                         <p>Upload your image <span style="color: red;">*</span></p>
                                                         <p class="text-muted small">
-                                                            We recommend 700x900px
+                                                            We recommend your image is 1920 x 1080px (16:9)
                                                         </p>
                                                     </div>
                                                 </form>                                   
@@ -477,7 +477,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write an informative description that will be shown to all your employees underneath your image">?</span></label>
+                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write an informative description that will be shown to all your employees underneath your image. It helps with add context, improve engagement and accessibility.">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
@@ -493,7 +493,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <div class="dz-message needsclick">
                                                         <i class="h1 text-muted dripicons-cloud-upload"></i>
                                                         <p>Upload a thumbnail for your video</p>
-                                                        <p class="small text-light">If you don't, we'll just use the first frame of your video as the thumbnail</p>
+                                                        <p class="small text-light">If you don't, we'll just use the first frame of your video as the thumbnail. We recommend your image is 1920 x 1080px (16:9)</p>
                                                     </div>
                                                 </form>                                   
                                             </div>
@@ -503,7 +503,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write an informative description that will be shown to all your employees underneath your video">?</span></label>
+                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write an informative description that will be shown to all your employees underneath your video. It helps add context and improve engagement">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
@@ -729,7 +729,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-deck-wrapper">
                                 <div class="card-deck">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
                                             <p class="card-text">This is a longer, clickable card with description text below as
                                                 a natural lead-in to additional content. This content is a little
@@ -738,7 +738,7 @@ border-color: #adada2; background-color: #efefef;">
                                     </div>
 
                                     <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
-                                        <div class="embed-responsive embed-responsive-1by1">
+                                        <div class="embed-responsive embed-responsive-16by9">
                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
                                         </div>
                                         <div class="card-body">
@@ -748,12 +748,39 @@ border-color: #adada2; background-color: #efefef;">
                                     </div>
 
                                     <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
-                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo.png" alt="Card image cap">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            
+                                            This card has tiny text.
                                         </div>
                                     </div>
 
+                                </div> <!-- end card-deck-->
+                            </div>  
+                        </div>  
+                    </div>
+
+                    <div class="row mt-2 mb-4">
+                        <div class="col-lg-12">
+                            <div class="card-deck-wrapper">
+                                <div class="card-deck">
+                                    <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">This is a longer, clickable card with description text below as
+                                                a natural lead-in to additional content. This content is a little
+                                                bit longer.</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
+                                        </div>
+                                        <div class="card-body">
+                                            <p class="card-text">This card has description text below as a natural
+                                                lead-in to additional content.</p>
+                                        </div>
+                                    </div>
                                 </div> <!-- end card-deck-->
                             </div>  
                         </div>  
