--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -776,6 +776,51 @@ border-color: #adada2; background-color: #efefef;">
                         </div>  
                     </div>
 
+                    <div class="row mt-2 mb-4">
+                        <div class="col-lg-12">
+                            <div class="card-deck-wrapper">
+                                <div class="card-deck">
+                                    <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">This is a longer, clickable card with description text below as
+                                                a natural lead-in to additional content. This content is a little
+                                                bit longer.</p>
+                                        </div>
+                                    </div>
+
+                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">This is a longer, clickable card with description text below as
+                                                a natural lead-in to additional content. This content is a little
+                                                bit longer.</p>
+                                        </div>
+                                    </div>
+
+                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">This is a longer, clickable card with description text below as
+                                                a natural lead-in to additional content. This content is a little
+                                                bit longer.</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
+                                        </div>
+                                        <div class="card-body">
+                                            <p class="card-text">This card has description text below as a natural
+                                                lead-in to additional content.</p>
+                                        </div>
+                                    </div>
+                                </div> <!-- end card-deck-->
+                            </div>  
+                        </div>  
+                    </div>
+
 
 
 
